trunk/Archive2/78/93f688c870bc9d/output
main.cpp:25:20: error: zero size arrays are an extension [-Werror,-Wzero-length-array]
   double data[] = {};
                   ^
1 error generated.
